--- a/app/module/_blog/_blog.scss
+++ b/app/module/_blog/_blog.scss
@@ -105,3 +105,81 @@
     }
   }
 }
+
+@media (max-width: 1230px) {
+  .blog {
+    &__items {
+      &::after {
+        right: 5px;
+      }
+    }
+  }
+}
+
+@media (max-width: 1200px) {
+  .blog {
+    padding: 50px 0 120px;
+
+    &__items {
+      display: grid;
+      grid-gap: 30px;
+      grid-template-columns: repeat(3, 1fr);
+    }
+
+    &__item-box {
+      padding: 20px 10px;
+    }
+  }
+}
+
+@media (max-width: 992px) {
+  .blog {
+    &__items {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    &__item-box {
+      padding: 20px 10px;
+    }
+
+    &__item {
+      max-width: 100%;
+
+      img {
+        width: 100%;
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .blog {
+    padding: 60px 0;
+    &__items {
+      grid-template-columns: repeat(1, 1fr);
+    }
+  }
+}
+
+@media (max-width: 375px) {
+  .blog-box {
+    display: block;
+    &__author {
+      display: inline-block;
+      margin-bottom: 5px;
+    }
+  }
+
+  .blog-box__author::before,
+  .blog-box__date::before {
+    top: 1px;
+  }
+
+  .blog {
+    &__item-imglink {
+      img {
+        height: 220px;
+      }
+    }
+  }
+}
