--- a/app/module/_header/_header.scss
+++ b/app/module/_header/_header.scss
@@ -1,15 +1,19 @@
-
 .header {
   padding: 40px 0;
 
   &__inner {
     align-items: center;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
   }
 }
 
 .menu {
+  &__btn {
+    display: none;
+  }
+
   &__list {
     display: flex;
   }
@@ -63,5 +67,125 @@
     color: #fff;
     text-align: center;
     line-height: 20px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .header {
+    &__inner {
+      padding-right: 10px;
+    }
+  }
+}
+
+@media (max-width: 860px) {
+  .header {
+    &__inner {}
+  }
+
+  .menu__list-item+.menu__list-item {
+    margin-left: 0px;
+  }
+
+  .menu {
+    order: 1;
+    margin-left: 40px;
+
+    &__list {
+
+      transform: translateY(-200%);
+      position: absolute;
+      top: 100px;
+      width: 100%;
+      left: 0;
+      flex-direction: column;
+      align-items: center;
+      z-index: 5;
+      transition: all .3s;
+
+      &.menu__list--active {
+        transform: translateY(0);
+        transition: all .3s;
+        background-color: #fff;
+      }
+
+    }
+
+    &__list-item {
+      width: 100%;
+      padding: 0 15px;
+      text-align: center;
+    }
+
+    &__list-link {
+
+      padding: 12px 0;
+      display: block;
+    }
+
+    &__btn {
+      cursor: pointer;
+      height: 22px;
+      width: 22px;
+      border: none;
+      background-color: transparent;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      padding: 0;
+
+      span {
+        width: 100%;
+        height: 3px;
+        background-color: $title;
+      }
+
+      &::after,
+      &::before {
+        position: absolute;
+        content: '';
+        width: 100%;
+        height: 3px;
+        background-color: $title;
+      }
+
+      &::after {
+        top: 0;
+      }
+
+      &::before {
+        bottom: 0;
+      }
+    }
+  }
+
+  .user-nav {
+
+    margin-left: auto;
+  }
+}
+
+@media (max-width: 500px) {
+
+  
+
+  .header__inner {
+    padding-right: 0;
+  }
+
+  .user-nav {
+    width: 100%;
+    margin-top: 30px;
+    justify-content: center;
+    padding-right: 15px;
+  }
+
+  .menu {
+    &__list {
+      top: 140px;
+    }
+
+    order: 0;
   }
 }
