--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,5 +1,5 @@
-
-html,body {
+html,
+body {
   height: 100%;
 }
 
@@ -43,6 +43,7 @@ a {
   text-transform: uppercase;
 
 }
+
 .text {
   text-align: center;
   max-width: 570px;
@@ -50,51 +51,55 @@ a {
 }
 
 .breadcrumbs {
-    display: inline-flex;
-    justify-content: center;
-    padding-left: 25px;
+  display: inline-flex;
+  justify-content: center;
+  padding-left: 25px;
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    background-image: url('../images/icons/home.svg');
+    height: 16px;
+    width: 16px;
+    left: 0;
+    top: 4px;
+  }
+
+  &__list {
+    display: flex;
+
+  }
+
+  &__item {
+    color: #727272;
+    padding-right: 40px;
     position: relative;
-    &::before {
-      content: "" ;
+
+    &::after {
+      content: '';
       position: absolute;
-      background-image: url('../images/icons/home.svg');
-      height: 16px;
-      width: 16px;
-      left: 0;
-      top: 4px;
+      background-image: url('../images/icons/arrow-right.svg');
+      width: 9px;
+      height: 10px;
+      right: 15px;
+      top: 9px;
     }
 
-		&__list {
-      display: flex;
-      
-		}
+    &:last-child {
+      color: $accent;
+      padding-right: 0;
 
-		&__item {
-      color: #727272;
-      padding-right: 40px;
-      position: relative;
-      &::after{
-        content: '';
-        position: absolute;
-        background-image: url('../images/icons/arrow-right.svg');
-        width: 9px;
-        height: 10px;
-        right: 15px;
-        top: 9px;
+      &::after {
+        display: none;
       }
-      &:last-child{
-        color: $accent;
-        padding-right: 0;
-        &::after {
-          display: none;
-        }
-      }
+    }
 
-		}
+  }
 
-		&__link {
-      color: inherit;
-		}
+  &__link {
+    color: inherit;
+  }
 }
 
 .header--404-page {
@@ -121,6 +126,7 @@ a {
   &__arrows {
     text-transform: uppercase;
     position: relative;
+
     &::before {
       position: absolute;
       content: '';
@@ -129,19 +135,36 @@ a {
       top: 8px;
     }
   }
+
   &__prev {
     padding-left: 15px;
+
     &::before {
-    background-image: url('../images/icons/angle-left.svg');
-    left: 0;
+      background-image: url('../images/icons/angle-left.svg');
+      left: 0;
     }
   }
-  
+
   &__next {
     padding-right: 15px;
+
     &::before {
       background-image: url('../images/icons/angle-right.svg');
       right: 0;
     }
+  }
+}
+
+@media (max-width: 620px) {
+  .title {
+    font-size: 40px;
+    line-height: 48px;
+  }
+}
+
+@media (max-width: 375px) {
+  .title {
+    font-size: 32px;
+    line-height: 40px;
   }
 }
