--- a/app/page-404.njk
+++ b/app/page-404.njk
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/page-404.min.css" />
+    <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body>
     {% include ('app/module/_header/_header.html') %}
