--- a/app/product.njk
+++ b/app/product.njk
@@ -6,31 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ProductByGosha</title>
     <link rel="stylesheet" href="css/product.min.css" />
+    <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body>
     {% include ('app/module/_header/_header.html') %}
 
     <main class="main">
-      <section class="top">
-        <div
-          class="top__container"
-          style="background-image: url('../images/top-bg.jpg')"
-        >
-          <div class="container">
-            <h2 class="top__title title">Product</h2>
-            <div class="breadcrumbs">
-              <ul class="breadcrumbs__list">
-                <li class="breadcrumbs__item">
-                  <a class="breadcrumbs__link" href="#"> Home </a>
-                </li>
-                <li class="breadcrumbs__item">
-                  <a class="breadcrumbs__link" href="#"> Product </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </section>
+      
+      {% include ('app/module/_top/_top.html') %}
+
       <section class="product-page">
         <div class="container">
           <div class="product-one">
