--- a/app/shop.njk
+++ b/app/shop.njk
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/shop.min.css" />
+    <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body>
    {% include ('app/module/_header/_header.html') %}
@@ -15,6 +16,9 @@
       <section class="shop">
         <div class="container">
           <div class="shop__inner">
+            <button class="shop__filter-btn">
+              <img src="images/icons/filter-btn.svg" alt="">  
+            </button>
             <div class="shop__filters filter">
               <div class="filter-search filter__item">
                 <h3 class="filter__title">Search</h3>
