--- a/app/blog.njk
+++ b/app/blog.njk
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog by Goshan</title>
     <link rel="stylesheet" href="css/blog.min.css" />
+    <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body>
    {% include ('app/module/_header/_header.html') %}
