--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -52,6 +52,7 @@ a {
 
 .breadcrumbs {
   display: inline-flex;
+
   justify-content: center;
   padding-left: 25px;
   position: relative;
@@ -68,7 +69,7 @@ a {
 
   &__list {
     display: flex;
-
+    flex-wrap: wrap;
   }
 
   &__item {
@@ -109,6 +110,7 @@ a {
 .pagination {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 
   .pagination__list {
     display: flex;
