added link to pages

--- a/app/blog.njk
+++ b/app/blog.njk
@@ -18,7 +18,7 @@
           <div class="blog-page__inner">
             <div class="blog-page__content">
               <div class="blog-page__item">
-                <a class="blog-page__item-link" href="#"
+                <a class="blog-page__item-link" href="blog-one.html"
                   ><img
                     class="blog-page__img"
                     src="images/blog/1-big.jpg"
@@ -26,7 +26,7 @@
                 /></a>
                 <div class="blog-page__item-box">
                   <h4 class="blog-page__item-title">
-                    <a class="blog-page__item-link" href="#"
+                    <a class="blog-page__item-link" href="blog-one.html"
                       >Be prepared to sweat a lot, but at least in the Southern
                       regions there’s a good chance you’ll get to enjoy!</a
                     >
@@ -44,7 +44,7 @@
                 </div>
               </div>
               <div class="blog-page__item">
-                <a class="blog-page__item-link" href="#"
+                <a class="blog-page__item-link" href="blog-one.html"
                   ><img
                     class="blog-page__img"
                     src="images/blog/2-big.jpg"
@@ -52,7 +52,7 @@
                 /></a>
                 <div class="blog-page__item-box">
                   <h4 class="blog-page__item-title">
-                    <a class="blog-page__item-link" href="#"
+                    <a class="blog-page__item-link" href="blog-one.html"
                       >Be prepared to sweat a lot, but at least in the Southern
                       regions there’s a good chance you’ll get to enjoy!</a
                     >
@@ -110,7 +110,7 @@
               <div class="blog-page__item blog-page__item--no-img">
                 <div class="blog-page__item-box">
                   <h4 class="blog-page__item-title">
-                    <a class="blog-page__item-link" href="#"
+                    <a class="blog-page__item-link" href="blog-one.html"
                       >Be prepared to sweat a lot, but at least in the Southern
                       regions there’s a good chance you’ll get to enjoy!</a
                     >
